A lot of improvements and fixes; Fixed delayed database loading; Fixed null service; Validation has been added;
