# src/routes/routes.ts
@@ -7,9 +7,8 @@ import {documentationController, flushController, stubsController} from '../cont
 
 let router = Router({mergeParams: true});
 
-router.get('/', function (request: Request, response: Response): void {
-    response.send('Techery proxy service');
-});
+router.use('/', staticFiles('documents/swagger'));
+router.get('/', wrap((req, res, next) => documentationController.show(req, res)));
 
 router.delete('/api/stubs', wrap((req, res, next) => stubsController.removeAll(req, res)));
 router.post('/api/flush', wrap(async (req, res, next) => flushController.flush(req, res)));
@@ -17,8 +16,5 @@ router.post('/api/flush', wrap(async (req, res, next) => flushController.flush(r
 router.use('/api/services', services);
 router.use('/api/services', stubs);
 router.use('/api/sessions', sessions);
-
-router.use('/api/documentation', staticFiles('documents/swagger'));
-router.get('/api/documentation', wrap((req, res, next) => documentationController.show(req, res)));
 
 export default router;
